# portfolio_site

./: Cargo.toml  README.md
src/: admin.rs  api.rs  content.rs  error.rs  file_upload.rs  json.rs  lib.rs  log.rs  login.rs  mail.rs  main.rs
static/: post_json_from_form.js  script.js  style.css  text_content_default.json
templates/: admin.html.hbs  error.html.hbs  file_upload_error.html  file_upload_success.html  index.html.hbs  index.html.tera  login.html
